--- a/client/src/scss/_indicators.scss
+++ b/client/src/scss/_indicators.scss
@@ -49,6 +49,7 @@
 		margin: 0;
 		padding: 0;
 		list-style: none;
+		white-space: nowrap;
 
 		&::after {
 			content: '';
